Resolve alignment issue in random dialog

--- a/desktop/assets/css/main.scss
+++ b/desktop/assets/css/main.scss
@@ -74,3 +74,6 @@ md-list-item.ng-hide {
 .md-button span {
   cursor: pointer !important;
 }
+.align-center {
+  text-align: center;
+}
